--- a/style.css
+++ b/style.css
@@ -52,7 +52,9 @@ a {
 }
 
 .hero-image {
-    width: 50%
+    width: 50%;
+    height: 216.5px;
+    object-fit: cover;
 }
 
 .hero-title {
@@ -76,8 +78,35 @@ a {
 }
 
 .info {
-    display: flex;
     height: 275px;
+    display: flex;
+    flex-direction: column;
+}
+
+.info-title {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    text-align: center;
+    padding: 16px;
+}
+
+.info-image {
+    width: 125px;
+    height: 125px;
+    border-radius: 5px;
+}
+
+.info-content {
+    display: flex;
+    justify-content: center;
+}
+
+.info-frame {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 .testimonial {
