--- a/style.css
+++ b/style.css
@@ -112,6 +112,21 @@ a {
 .testimonial {
     background-color: #e5e7eb;
     height: 275px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 300;
+}
+
+.author {
+    font-weight: 900;
+    color: #1f2937;
+    text-align: right;
 }
 
 .call {
